<?xml version="1.0" encoding="utf-8"?>
<com.baidu.browser.webpool.BdErrorView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/webview_error_imageview"
            android:src="@drawable/borwser_errorpage_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dip"
            android:duplicateParentState="true" />

        <TextView
            android:id="@+id/webview_error_description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dip"
            android:textSize="28sp"
            android:textColor="@color/browser_error_page_button_text_color"
            android:text="@string/webview_error_fail_resion" />
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="50dip"
            android:textSize="18sp"
            android:textColor="@color/browser_error_page_text_color"
            android:text="@string/webview_error_fail_resion" />
         
         <LinearLayout 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="58dip"
                 android:textSize="18sp"
                 android:textColor="@color/browser_error_page_text_color"
                 android:text="@string/webview_error_fail_resion_one"
                 />
             <Button 
                 android:id="@+id/refurbish_button"
                 android:layout_width="wrap_content"
                 android:layout_height="25dip"
                 android:text="@string/web_setting"
                 android:textSize="18sp"
                 android:textColor="@color/refurbish_button_color"
                 android:background="@android:color/transparent"
                 android:layout_marginLeft="3dip"/>
         </LinearLayout>
         
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dip"
            android:textSize="18sp"
            android:textColor="@color/browser_error_page_text_color"
            android:text="@string/webview_error_fail_resion_two" />

        <Button
            android:id="@+id/webview_error_button"
            android:layout_width="134dip"
            android:layout_height="42dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dip"
            android:textSize="19sp"
            android:textColor="@color/browser_error_page_button_color"
            android:textStyle="bold"
            android:background="@drawable/browser_webview_error_btn_selector"
            android:text="@string/webview_error_retry_button" />
    </LinearLayout>

</com.baidu.browser.webpool.BdErrorView>